--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@ alt="funny image 2" height="300", width="400"/>
 <br>
 
 <a href="https://www.nytimes.com/crosswords">play a game!</a>
+<br>
+<a href="page2.html">Second page</a>
 
 <p>Here is where we can put another paragraph.</p>
 <br>
